# GreenTrust_Ai

./: .env.example  .gitignore  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  app.py  config.py  demo_config.py  generate_edge_cases.py  generate_pdfs.py  llm_providers.py  main.py  pyproject.toml  run_demo.py  test_workflow.py
agents/: __init__.py  compliance_agent.py  extraction_agent.py  regex_extractor.py  state.py  verification_agent.py  workflow.py
data_samples/: README.md  sample_invoice_1.txt  sample_invoice_2.txt
evaluation/: __init__.py  ragas_setup.py
knowledge_base/: logistics_api.py  sebi_brsr_standards.md
utils/: currency_converter.py  observability.py  privacy.py  risk_assessment.py
